<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.HargaFragment">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
            <LinearLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/formDari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                   <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/dari"
                       android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="3"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="@dimen/_90sdp"
                            android:layout_height="match_parent"
                            android:importantForAutofill="no"
                            android:gravity="center_vertical"
                            android:text="@string/kota_kabupaten_kecamatan"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_10sdp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/_1"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="center"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/etFromCity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border_edit_text"
                            android:drawableEnd="@drawable/ic_expand_more"
                            android:focusable="false"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_10sdp"
                            />


                </LinearLayout>



                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/tujuan"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:text="@string/kota_kabupaten_kecamatan"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:text="@string/_1"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/etToCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_edit_text"
                        android:focusable="false"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_10sdp"
                        android:drawableEnd="@drawable/ic_expand_more"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:text="@string/berat_gram"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:text="@string/_1"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold"
                        />

                    <EditText
                        android:id="@+id/etWeight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_edit_text"
                        android:padding="@dimen/_5sdp"
                        android:inputType="number"
                        android:focusableInTouchMode="true"
                        android:maxLines="1"
                        android:hint="@string/_0"
                        android:maxLength="6"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp"
                        />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/clear_text"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_button_clear"
                        android:textAlignment="center"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:text="@string/bersihkan"
                        android:textAllCaps="false"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_11sdp"
                        />

                    <TextView
                        android:id="@+id/btnProcess"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_button_terang"
                        android:textAlignment="center"
                        android:text="@string/cek"
                        android:textAllCaps="false"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp"
                        />

                </LinearLayout>
            </LinearLayout>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="#EDEDED" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="5dp"
                android:overScrollMode="never"
                android:scrollbars="none"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>